// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/item-icon/ItemIcon render() should render component with additional props 1`] = `
<IconFileAudio32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 2`] = `
<IconFileBookmark32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 3`] = `
<IconFileBoxNote32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 4`] = `
<IconFileCode32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 5`] = `
<IconFileDefault32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 6`] = `
<IconFileText32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 7`] = `
<IconFIleDwg32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 8`] = `
<IconFileExcel32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 9`] = `
<IconFolderShared32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 10`] = `
<IconFolderExternal32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 11`] = `
<IconFolderPersonal32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 12`] = `
<IconFileDocs32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 13`] = `
<IconFileSheets32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 14`] = `
<IconFileSlides32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 15`] = `
<IconFileIllustrator32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 16`] = `
<IconFileImage32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 17`] = `
<IconFileIndesign32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 18`] = `
<IconFileKeynote32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 19`] = `
<IconFileNumbers32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 20`] = `
<IconFilePages32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 21`] = `
<IconFilePdf32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 22`] = `
<IconFilePhotoshop32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 23`] = `
<IconFilePowerpoint32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 24`] = `
<IconFilePresentation32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 25`] = `
<IconFileSpreadsheet32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 26`] = `
<IconFileText32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 27`] = `
<IconFileThreeD32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 28`] = `
<IconFolderPersonal32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 29`] = `
<IconFileVector32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 30`] = `
<IconFileVideo32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 31`] = `
<IconFileWord32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 32`] = `
<IconFileZip32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 33`] = `
<IconFileDefault32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 1`] = `
<IconFileAudio32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 2`] = `
<IconFileBookmark32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 3`] = `
<IconFileBoxNote32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 4`] = `
<IconFileCode32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 5`] = `
<IconFileDefault32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 6`] = `
<IconFileText32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 7`] = `
<IconFIleDwg32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 8`] = `
<IconFileExcel32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 9`] = `
<IconFolderShared32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 10`] = `
<IconFolderExternal32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 11`] = `
<IconFolderPersonal32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 12`] = `
<IconFileDocs32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 13`] = `
<IconFileSheets32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 14`] = `
<IconFileSlides32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 15`] = `
<IconFileIllustrator32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 16`] = `
<IconFileImage32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 17`] = `
<IconFileIndesign32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 18`] = `
<IconFileKeynote32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 19`] = `
<IconFileNumbers32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 20`] = `
<IconFilePages32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 21`] = `
<IconFilePdf32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 22`] = `
<IconFilePhotoshop32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 23`] = `
<IconFilePowerpoint32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 24`] = `
<IconFilePresentation32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 25`] = `
<IconFileSpreadsheet32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 26`] = `
<IconFileText32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 27`] = `
<IconFileThreeD32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 28`] = `
<IconFolderPersonal32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 29`] = `
<IconFileVector32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 30`] = `
<IconFileVideo32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 31`] = `
<IconFileWord32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 32`] = `
<IconFileZip32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 33`] = `
<IconFileDefault32
  height={32}
  width={32}
/>
`;
